@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools --ignore-installed
         python -m pip install --upgrade wheel typing_extensions
-        python -m pip install -r requirements-build.txt
+        python -m pip install -r requirements.txt
         python -m pip install --upgrade pyqt5-tools
 
     - name: Grab iso-639 lists
