@@ -31,7 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools --ignore-installed
         python -m pip install --upgrade pypiwin32 wheel typing_extensions
-        python -m pip install -r requirements-build.txt
+        python -m pip install -r requirements.txt
 
     - name: Grab iso-639 lists
       shell: powershell
